<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="15dp"
    android:background="@drawable/ic_create_content_bg"
    android:paddingHorizontal="15dp"
    android:paddingVertical="10dp">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wi_fi_name_ssid"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_ssid"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/ic_edit_bg"
        android:hint="@string/input_ssid"
        android:paddingHorizontal="12dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/title1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/et_ssid" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/ic_edit_bg"
        android:hint="@string/input_password"
        android:paddingHorizontal="12dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/title2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/mode"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/et_pwd" />

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title3">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="20dp">

            <CheckBox
                android:id="@+id/check2"
                android:layout_width="wrap_content"
                android:layout_height="18dp"

                android:button="@null"
                android:checked="true"
                android:drawableStart="@drawable/check_draw_16"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:text="@string/wpa"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintLeft_toRightOf="@id/check1"
                app:layout_constraintTop_toTopOf="@id/check1" />

            <CheckBox
                android:id="@+id/check1"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_marginStart="10dp"
                android:button="@null"
                android:drawableStart="@drawable/check_draw_16"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:text="@string/mpa_wpa2"
                android:textColor="@color/white"
                android:textSize="13sp" />


            <CheckBox
                android:id="@+id/check3"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_marginStart="10dp"
                android:button="@null"
                android:drawableStart="@drawable/check_draw_16"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:text="@string/wep"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintLeft_toRightOf="@id/check2"
                app:layout_constraintTop_toTopOf="@id/check1" />

            <CheckBox
                android:id="@+id/check4"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_marginStart="10dp"
                android:button="@null"
                android:drawableStart="@drawable/check_draw_16"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:text="@string/none"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintLeft_toRightOf="@id/check3"
                app:layout_constraintTop_toTopOf="@id/check1" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>