<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="15dp"
    android:background="@drawable/ic_create_content_bg"
    android:paddingHorizontal="15dp"
    android:paddingTop="12dp"
    android:paddingBottom="18dp">


    <CheckBox
        android:id="@+id/check1"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginTop="10dp"
        android:button="@null"
        android:checked="true"
        android:drawableStart="@drawable/check_draw_16"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/check2"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginHorizontal="2dp"
        android:button="@null"
        android:drawableStart="@drawable/check_draw_16"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:paddingHorizontal="12dp"
        android:text="@string/url"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@id/check1"
        app:layout_constraintTop_toTopOf="@id/check1" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_url"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/ic_edit_bg"
        android:hint="@string/input"
        android:paddingHorizontal="12dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/check1" />
</androidx.constraintlayout.widget.ConstraintLayout>