<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F4F6">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:text="@string/result"
        android:textColor="#333333"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginHorizontal="16dp"
        android:src="@drawable/ic_back"
        android:tint="#333333"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_bg"
        android:layout_width="match_parent"
        android:layout_height="228dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/ic_theme_im_bg"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/layout"
        app:layout_constraintLeft_toLeftOf="@id/iv_bg"
        app:layout_constraintRight_toRightOf="@id/iv_bg"
        app:layout_constraintTop_toTopOf="@id/iv_bg">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="6dp"
            android:paddingTop="10dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            tool:text="eeeeeeeeeeeeeeeee" />
    </ScrollView>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="35dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/iv_bg">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_copy"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="3dp"
            android:src="@drawable/ic_copy" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/the_scanned_qr_code_content"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.anythink.nativead.api.ATNativeView
        android:id="@+id/native_ad_view"
        android:layout_width="match_parent"
        android:layout_height="264dp"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rect_dbdbdb_r12"
        app:layout_constraintBottom_toTopOf="@id/tv_share">

        <include
            android:id="@+id/native_self_render"
            layout="@layout/ad_native_self"
            android:visibility="gone" />
    </com.anythink.nativead.api.ATNativeView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_share"
        android:layout_width="134dp"
        android:layout_height="34dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/ic_share_bg"
        android:gravity="center"
        android:text="@string/share"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>